adding section and implementing psuedo-class

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <script src="https://kit.fontawesome.com/86ebc00c6c.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&family=Mynerve&family=Shantell+Sans&family=Tilt+Prism&display=swap" rel="stylesheet"><link rel="stylesheet" href="/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&family=Mulish:wght@400;700&family=Shantell+Sans&family=Tilt+Warp&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header>
@@ -42,16 +44,52 @@
                 <div class="content">
                 <h2 class="head-text">Jelajahi <span class="indo">Indo</span><span class="nesia">nesia</span> sekarang. <br>Mari wujudkan mimpimu bersama kami.</h2>
                 <p class="text-content">Jelajahi Indonesia bersama kami. Sebuah solusi bagi kamu yang ingin berkeliling indonesia dan liburan di tempat terkenal yang ada di Indonesia </p>
-                <input type="button" value="Jelajah Sekarang!" class="btn-submit">
+                <div class="wrapper-row">
+                    <input type="button" value="Jelajah Sekarang!" class="btn-submit">
+                    <input type="button" value="Tempat Terbaik?" class="btn-testimonial"  onclick="window.location.href='#best-rated';">
+                </div>
                 </div>
             </div>
 
         </div>
 
-
+        <section class="high-rated">
         <div class="testimonial" id="content">
-            <h2 class="testi-text" >OUR TESTIMONIAL</h2>
+            <h2 class="testi-text" id="best-rated" >BEST RATED⭐⭐ <br> PLACES IN INDONESIA</h2>
+
+            <div class="row-place">
+                <div class="column left-column">
+                    <h1 class="header-place-first">PULAU BALI</h1>
+                    <p class="left-first-text">Bali adalah sebuah wilayah provinsi yang terletak di Indonesia. <br> Ibu kotanya adalah Denpasar. Provinsi Bali terletak di bagian barat Kepulauan Nusa Tenggara.</p>
+                 </div>
+                <div class="column">
+                    <img src="assets/pexels-kimberly-mcneilus-2480626.jpg" alt="" class="column-hero-first">
+                </div>
+            </div>
+    <br> <br>
+            <div class="row-place">
+                <div class="column">
+                    <img src="assets/pexels-bart-ter-haar-15416576.jpg" alt="" class="column-hero-first">
+                 </div>
+                <div class="column  left-column">
+
+                    <h1 class="header-place-first">RAJA AMPAT</h1>
+                    <p class="left-first-text">Kepulauan Raja Ampat adalah gugusan kepulauan yang berlokasi di barat bagian Semenanjung Kepala Burung Pulau Papua. Secara administrasi, gugusan ini berada di bawah Kabupaten Raja Ampat dan Kota Sorong, Provinsi Papua Barat Daya.</p>
+
+                </div>
+            </div>
+
+
+
         </div>
+
+
+
+        </section>
+
+        <section class="image-">
+
+        </section>
 
     </main>
 
