adding section and implementing psuedo-class

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <main>
 
-        <div class="jumbotron">
+        <div class="jumbotron" id="content">
             <div class="image-hero row">
 
                 <img src="assets/pexels-ahmad-syahrir-758742.jpg" alt="" class="image-first">
@@ -43,7 +43,7 @@
             <div class="row second-row">
                 <div class="content">
                 <h2 class="head-text">Jelajahi <span class="indo">Indo</span><span class="nesia">nesia</span> sekarang. <br>Mari wujudkan mimpimu bersama kami.</h2>
-                <p class="text-content">Jelajahi Indonesia bersama kami. Sebuah solusi bagi kamu yang ingin berkeliling indonesia dan liburan di tempat terkenal yang ada di Indonesia </p>
+                <p class="text-content">Jelajahi Indonesia bersama kami. Sebuah solusi bagi kamu yang ingin berkeliling Indonesia atau berlibur di tempat terkenal yang ada di Indonesia </p>
                 <div class="wrapper-row">
                     <input type="button" value="Jelajah Sekarang!" class="btn-submit">
                     <input type="button" value="Tempat Terbaik?" class="btn-testimonial"  onclick="window.location.href='#best-rated';">
@@ -52,10 +52,10 @@
             </div>
 
         </div>
+        <h2 class="testi-text" id="best-rated" >BEST RATED<br> PLACES IN <span class="indonesia"> <span class="indo">INDO</span><span class="nesia">NESIA </span></span><br><span class="star">⭐⭐⭐</span> </h2>
 
-        <section class="high-rated">
-        <div class="testimonial" id="content">
-            <h2 class="testi-text" id="best-rated" >BEST RATED⭐⭐ <br> PLACES IN INDONESIA</h2>
+        <article class="high-rated">
+        <div class="testimonial" id="content-testi">
 
             <div class="row-place">
                 <div class="column left-column">
@@ -67,11 +67,11 @@
                 </div>
             </div>
     <br> <br>
-            <div class="row-place">
+            <div class="row-place-second">
                 <div class="column">
                     <img src="assets/pexels-bart-ter-haar-15416576.jpg" alt="" class="column-hero-first">
                  </div>
-                <div class="column  left-column">
+                <div class="column left-column">
 
                     <h1 class="header-place-first">RAJA AMPAT</h1>
                     <p class="left-first-text">Kepulauan Raja Ampat adalah gugusan kepulauan yang berlokasi di barat bagian Semenanjung Kepala Burung Pulau Papua. Secara administrasi, gugusan ini berada di bawah Kabupaten Raja Ampat dan Kota Sorong, Provinsi Papua Barat Daya.</p>
@@ -82,17 +82,31 @@
 
 
         </div>
+        </article>
+
+    <br><br>
+        <hr>
+
+        <div class="wrapper-contact-profile">
+            <article class="contact-us row">
+                <h1>Contact Us</h1>
+                <div class="box-contact">
+                    <label for="">Name:</label>
+               </div>
+            </article>
+
+            <aside class="row profile">
+                <h1>About Me</h1>
+                <div class="box-contact">
+                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid animi dicta eum, exercitationem magnam rem.</p>
+                </div>
+            </aside>
+        </div>
 
 
-
-        </section>
-
-        <section class="image-">
-
-        </section>
 
     </main>
-
+    <script src="js/script.js"></script>
 
 </body>
 </html>
