--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&family=Mulish:wght@400;700&family=Shantell+Sans&family=Tilt+Warp&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <header>
@@ -146,7 +146,7 @@
 
 
     </footer>
-    <script src="assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 
 </body>
 </html>
